--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "skillcheck",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8070",
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "main": "server/index.js",
-    "proxy": "http://localhost:8070",
+    "massive": "^5.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
